--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vite-project",
+  "name": "react-vite-template",
+  "homepage": "https://SonGlad.github.io/react-vite-template/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
