--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "dependencies": {
     "react": "^19.0.0",
