--- a/package.json
+++ b/package.json
@@ -11,8 +11,21 @@
     "lint:js": "eslint src/**/*.{js,jsx}"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
+    "modern-normalize": "^3.0.1",
+    "nanoid": "^5.1.5",
+    "normalize-scss": "^8.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.1",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.16",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
